--- a/index.html
+++ b/index.html
@@ -279,14 +279,14 @@
               <div class="flex flex-col lg:flex-row my-5">
                 <img class="h-10 p-2 mx-auto bg-slate-100 rounded-3xl" src="images/icons/heart.png" alt="">
                 <div class="ml-2">
-                  <h1 class="text-2xl font-black">Dedicated Team</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-0">
+                  <h1 class="text-2xl font-black">Fresh is Best</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-0">
                   <p class="text-base font-normal text-[#12121258]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                 </div>
               </div>
               <div class="flex flex-col lg:flex-row my-5">
                 <img class="h-10 p-2 mx-auto bg-slate-100 rounded-3xl" src="images/icons/surprise.png" alt="">
                 <div class="ml-2">
-                  <h1 class="text-2xl font-black">Dedicated Team</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-0">
+                  <h1 class="text-2xl font-black">Gift Certificates</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-0">
                   <p class="text-base font-normal text-[#12121258]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                 </div>
               </div>
@@ -297,21 +297,21 @@
             <div class="cards w-[90%]">
               <div class="flex flex-col-reverse lg:flex-row my-5">
                 <div class="ml-2">
-                  <h1 class="text-2xl font-black">Dedicated Team</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-[66%]">
+                  <h1 class="text-2xl font-black">Integrated Supplier</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-[66%]">
                   <p class="text-base font-normal text-[#12121258]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                 </div>
                 <img class="h-10 p-2 mx-auto bg-slate-100 rounded-3xl" src="images/icons/fruit.png" alt="">
               </div>
               <div class="flex flex-col-reverse lg:flex-row my-5">
                 <div class="ml-2">
-                  <h1 class="text-2xl font-black">Dedicated Team</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-[66%]">
+                  <h1 class="text-2xl font-black">Sustainable Practice</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-[66%]">
                   <p class="text-base font-normal text-[#12121258]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                 </div>
                 <img class="h-10 p-2 mx-auto bg-slate-100 rounded-3xl" src="images/icons/ice-cream-cone.png" alt="">
               </div>
               <div class="flex flex-col-reverse lg:flex-row my-5">
                 <div class="ml-2">
-                  <h1 class="text-2xl font-black">Dedicated Team</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-[66%]">
+                  <h1 class="text-2xl font-black">The Benefits Only</h1> <hr class="my-3 w-4/12 border-[1px] bg-black relative left-[33%] lg:left-[66%]">
                   <p class="text-base font-normal text-[#12121258]">Professional employees are there for you to pick the most amazing and fresh fruits.</p>
                 </div>
                 <img class="h-10 p-2 mx-auto bg-slate-100 rounded-3xl" src="images/icons/like.png" alt="">
