--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="banner-section w-11/12 mx-auto">
             <div class="carousel rounded h-80 md:h-[480px] w-full">
                 <div id="slide1" class="carousel-item relative w-full">
-                    <div class="w-full bg-blend-overlay bg-cover bg-[url('./images/banner1.png')] flex items-center justify-center">
+                    <div class="w-full bg-blend-overlay bg-black bg-opacity-30 bg-cover bg-[url('./images/banner1.png')] flex items-center justify-center">
                         <div class="text-white text-center">
                             <h1 class="text-4xl md:text-7xl font-black">Exotic tastes at your <br> doorstep</h1>
                             <p class="text-xl font-normal my-5">We supply highly quality organic products</p>
@@ -55,7 +55,7 @@
                   </div>
                 </div> 
                 <div id="slide2" class="carousel-item relative w-full">
-                    <div class="w-full bg-cover bg-[url('./images/banner2.png')] flex items-center justify-center">
+                    <div class="w-full bg-cover bg-blend-overlay bg-black bg-opacity-30 bg-[url('./images/banner2.png')] flex items-center justify-center">
                         <div class="text-white text-center">
                             <h1 class="text-4xl md:text-7xl font-black">Exotic tastes at your <br> doorstep</h1>
                             <p class="text-xl font-normal my-5">We supply highly quality organic products</p>
@@ -68,7 +68,7 @@
                   </div>
                 </div> 
                 <div id="slide3" class="carousel-item relative w-full">
-                    <div class="w-full bg-cover bg-[url('./images/banner3.png')] flex items-center justify-center">
+                    <div class="w-full bg-cover  bg-[url('./images/banner3.png')] flex items-center justify-center">
                         <div class="text-white text-center">
                             <h1 class="text-4xl md:text-7xl font-black">Exotic tastes at your <br> doorstep</h1>
                             <p class="text-xl font-normal my-5">We supply highly quality organic products</p>
@@ -81,7 +81,7 @@
                   </div>
                 </div> 
                 <div id="slide4" class="carousel-item relative w-full">
-                    <div class="w-full bg-cover bg-[url('./images/banner4.png')] flex items-center justify-center">
+                    <div class="w-full bg-cover bg-blend-overlay bg-black bg-opacity-30 bg-[url('./images/banner4.png')] flex items-center justify-center">
                         <div class="text-white text-center">
                             <h1 class="text-4xl md:text-7xl font-black">Exotic tastes at your <br> doorstep</h1>
                             <p class="text-xl font-normal my-5">We supply highly quality organic products</p>
@@ -169,7 +169,28 @@
                   <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                   <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                 </svg>
-                <button class=" text-[#F85559] text-xl font-bold">details</button>
+                <!-- Open the modal using ID.showModal() method -->
+                <button class="text-[#F85559] text-xl font-bold" onclick="my_modal_1.showModal()">details</button>
+                <dialog id="my_modal_1" class="modal">
+                  <form method="dialog" class="modal-box">
+                    <img class="h-28 mx-auto mb-8" src="images/fruit6.png" alt="">
+                    <h4 class="text-2xl font-bold text-black p-3">12.90$ - 18.85$</h4><hr class="w-2/3 mx-auto">
+                    <p class="text-base font-normal text-[#12121258]">Apples</p>
+                    <svg class="mx-auto my-4" xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
+                      <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
+                      <path d="M45.9043 0L50.4532 7.00591L58.5219 9.16716L53.2645 15.6584L53.7023 24L45.9043 21.0059V0Z" fill="#FBC0A8"/>
+                      <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
+                      <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
+                      <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
+                      <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
+                    </svg>
+                    <div class="modal-action">
+                      <!-- if there is a button in form, it will close the modal -->
+                      <button class="text-[#F85559] border p-4 m-5 rounded-md border-[#F85559] text-xl font-bold">Close</button>
+                      <button class="bg-[#F85559] p-4 m-5 rounded-md text-white  text-xl font-bold">Buy Now</button>
+                    </div>
+                  </form>
+                </dialog>
               </div>
               <div class="product bg-[#FFF] border rounded text-center p-5">
                 <img class="h-28 mx-auto mb-8" src="images/fruit7.png" alt="">
@@ -183,7 +204,25 @@
                   <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                   <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                 </svg>
-                <button class=" text-[#F85559] text-xl font-bold">details</button>
+                <!-- You can open the modal using ID.showModal() method -->
+                <button class="text-[#F85559] text-xl font-bold" onclick="my_modal_3.showModal()">details</button>
+                <dialog id="my_modal_3" class="modal">
+                  <form method="dialog" class="modal-box">
+                    <img class="h-28 mx-auto mb-8" src="images/fruit7.png" alt="">
+                    <h4 class="text-2xl font-bold text-black p-3">12.90$ - 18.85$</h4><hr class="w-2/3 mx-auto">
+                    <p class="text-base font-normal text-[#12121258]">Orange</p>
+                    <svg class="mx-auto my-4" xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
+                  <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
+                  <path d="M45.9043 0L50.4532 7.00591L58.5219 9.16716L53.2645 15.6584L53.7023 24L45.9043 21.0059V0Z" fill="#FBC0A8"/>
+                  <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
+                  <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
+                  <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
+                  <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
+                    </svg>
+                    <button class="text-[#F85559] border p-4 m-5 rounded-md border-[#F85559] text-xl font-bold">Close</button>
+                    <button class="bg-[#F85559] p-4 m-5 rounded-md text-white  text-xl font-bold">Buy Now</button>
+                  </form>
+                </dialog>
               </div>
               <div class="product bg-[#FFF] border rounded text-center p-5">
                 <img class="h-28 mx-auto mb-8" src="images/fruit8.png" alt="">
@@ -197,7 +236,28 @@
                   <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                   <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                 </svg>
-                <button class=" text-[#F85559] text-xl font-bold">details</button>
+                <!-- Open the modal using ID.showModal() method -->
+                <button class="text-[#F85559] text-xl font-bold" onclick="my_modal_5.showModal()">details</button>
+                <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                  <form method="dialog" class="modal-box">
+                    <img class="h-28 mx-auto mb-8" src="images/fruit8.png" alt="">
+                <h4 class="text-2xl font-bold text-black p-3">12.90$ - 18.85$</h4><hr class="w-2/3 mx-auto">
+                <p class="text-base font-normal text-[#12121258]">Red Dragon</p>
+                <svg class="mx-auto my-4" xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
+                  <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
+                  <path d="M45.9043 0L50.4532 7.00591L58.5219 9.16716L53.2645 15.6584L53.7023 24L45.9043 21.0059V0Z" fill="#FBC0A8"/>
+                  <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
+                  <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
+                  <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
+                  <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
+                </svg>
+                    <div class="modal-action">
+                      <!-- if there is a button in form, it will close the modal -->
+                      <button class="text-[#F85559] border p-4 m-5 rounded-md border-[#F85559] text-xl font-bold">Close</button>
+                      <button class="bg-[#F85559] p-4 m-5 rounded-md text-white  text-xl font-bold">Buy Now</button>
+                    </div>
+                  </form>
+                </dialog>
               </div>
               <div class="product bg-[#FFF] border rounded text-center p-5">
                 <img class="h-28 mx-auto mb-8" src="images/fruit9.png" alt="">
@@ -211,14 +271,37 @@
                   <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
                   <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
                 </svg>
-                <button class=" text-[#F85559] text-xl font-bold">details</button>
+                <!-- The button to open modal -->
+                <label for="my_modal_6" class="text-[#F85559] text-xl font-bold">details</label>
+                
+                <!-- Put this part before tag -->
+                <input type="checkbox" id="my_modal_6" class="modal-toggle" />
+                <div class="modal">
+                  <div class="modal-box">
+                    <img class="h-28 mx-auto mb-8" src="images/fruit9.png" alt="">
+                <h4 class="text-2xl font-bold text-black p-3">12.90$ - 18.85$</h4><hr class="w-2/3 mx-auto">
+                <p class="text-base font-normal text-[#12121258]">Banana</p>
+                <svg class="mx-auto my-4" xmlns="http://www.w3.org/2000/svg" width="160" height="24" viewBox="0 0 160 24" fill="none">
+                  <path d="M45.8529 0L50.4018 7.00591L58.4705 9.16716L53.2131 15.6584L53.651 24L45.8529 21.0059L38.0549 24L38.4927 15.6584L33.2354 9.16716L41.3041 7.00591L45.8529 0Z" fill="#F85559"/>
+                  <path d="M45.9043 0L50.4532 7.00591L58.5219 9.16716L53.2645 15.6584L53.7023 24L45.9043 21.0059V0Z" fill="#FBC0A8"/>
+                  <path d="M12.6176 0L17.1664 7.00591L25.2351 9.16716L19.9778 15.6584L20.4156 24L12.6176 21.0059L4.81952 24L5.25735 15.6584L0 9.16716L8.06871 7.00591L12.6176 0Z" fill="#F85559"/>
+                  <path d="M79.6176 0L84.1664 7.00591L92.2351 9.16716L86.9778 15.6584L87.4156 24L79.6176 21.0059L71.8195 24L72.2574 15.6584L67 9.16716L75.0687 7.00591L79.6176 0Z" fill="#FBC0A8"/>
+                  <path d="M146.618 0L151.166 7.00591L159.235 9.16716L153.978 15.6584L154.416 24L146.618 21.0059L138.82 24L139.257 15.6584L134 9.16716L142.069 7.00591L146.618 0Z" fill="#FBC0A8"/>
+                  <path d="M113.618 0L118.166 7.00591L126.235 9.16716L120.978 15.6584L121.416 24L113.618 21.0059L105.82 24L106.257 15.6584L101 9.16716L109.069 7.00591L113.618 0Z" fill="#FBC0A8"/>
+                </svg>
+                    <div class="modal-action">
+                      <label for="my_modal_6" class="text-[#F85559] border p-4 m-5 rounded-md border-[#F85559] text-xl font-bold">Close!</label>
+                      <button class="bg-[#F85559] p-4 m-5 rounded-md text-white  text-xl font-bold">Buy Now</button>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           <button class="text-white bg-[#F85559] text-xl font-bold rounded px-8 py-4 mt-6">Shop All</button>
           </div>
         </div>
 
-        <section class="team-section py-14 w-11/12 mx-auto rounded-2xl my-10">
+        <section class="team-section py-14 w-11/12 mx-auto rounded-2xl my-10 bg-blend-overlay bg-black bg-opacity-30 bg-[url('./images/banner1.png')]">
           <div>
             <div class="w-11/12 md:w-1/2 mx-auto text-center">
               <h2 class=" text-5xl text-white font-black">Meet the team section</h2>
