--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
@@ -301,7 +302,7 @@
           </div>
         </div>
 
-        <section class="team-section py-14 w-11/12 mx-auto rounded-2xl my-10 bg-blend-overlay bg-black bg-opacity-30 bg-[url('./images/banner1.png')]">
+        <section class="team-section py-14 w-11/12 mx-auto rounded-2xl my-10 bg-blend-overlay bg-no-repeat bg-cover bg-black bg-opacity-30 bg-[url('./images/banner1.png')]">
           <div>
             <div class="w-11/12 md:w-1/2 mx-auto text-center">
               <h2 class=" text-5xl text-white font-black">Meet the team section</h2>
